--- a/css/styles.css
+++ b/css/styles.css
@@ -582,8 +582,8 @@ img {
 }
 
 .modal {
-    min-width: 408px;
-    min-height: 576px;
+    width: 408px;
+    min-height: 584px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -594,6 +594,7 @@ img {
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform var(--transition);
+    padding: 24px;
 }
 
 .backdrop.is-hidden .modal {
@@ -605,11 +606,103 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     width: 24px;
     height: 24px;
-    display: inline-block;
     box-sizing: border-box;
     border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    transition: background var(--transition), border-radius var(--transition),
+        fill var(--transition);
+    margin-bottom: 24px;
+    cursor: pointer;
+}
 
-    position: absolute;
-    top: 24px;
-    right: 24px;
+.backdrop-btn:hover,
+.backdrop-btn:focus {
+    background: #404bbf;
+    border-radius: 50%;
+    fill: #ffffff;}
+
+.modal-title{
+    margin-bottom: 14px;
+    font-family: 'Roboto',sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        text-align: center;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
+}
+
+.modal-form {
+}
+
+.modal-list{
+    position: relative;
+}
+
+.modal-item{
+    margin-bottom: 8px;
+}
+
+.input-label{
+    font-family: 'Roboto',sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.04em;
+        color: #8E8F99;
+}
+
+.modal-input {
+    padding-left: 35px;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;;
+        outline: none;
+        transform: border var(--transition) border-radius var(--transition);
+}
+
+.modal-wrap{
+    position: relative;
+}
+
+.modal-input:focus{
+    border: 1px solid #4D5AE5;
+}
+
+.modal-input:focus + .modal-icon{
+    fill: #4D5AE5
+}
+
+.modal-icon{
+position: absolute;
+    left: 19px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill var(--transition);
+}
+
+.comment{
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 16px;
+    padding-top: 8px;
+    resize: none;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.comment::placeholder{
+    font-family: 'Roboto',sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0.04em
 }
