--- a/css-portfolio/styles.css
+++ b/css-portfolio/styles.css
@@ -142,6 +142,10 @@ transition: var(--transition);
         position: relative;
 }
 
+.ht.current {
+    color: #404BBF;
+}
+
 .header-item.current::after {
     content: '';
     position: absolute;
@@ -149,7 +153,7 @@ transition: var(--transition);
     height: 4px;
     background-color: #404BBF;
     left: 0;
-    bottom: -100%;
+    bottom: -108%;
     border-radius: 2px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -272,7 +276,7 @@ transition: var(--transition);
     color: #4D5AE5;
     background-color: #F4F4FD;
     padding: 0;
-    border: none;
+    border: 1px solid #E7E9FC;;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 600;
@@ -322,9 +326,13 @@ transition: var(--transition);
     color: #434455;
 }
 
-.footer > .container{
+.footer-wrap {
     display: flex;
-    gap: 120px;
+    gap: 120PX;
+}
+
+.footer>.container {
+    display: flex;
 }
 
 .footer {
@@ -359,7 +367,7 @@ transition: var(--transition);
 }
 
 .footer-media {
-    margin: 0, auto;
+    margin-left: 80px;
 }
 
 .footer-media>.cotainer {
@@ -368,12 +376,13 @@ transition: var(--transition);
 }
 
 .soc-media {
-font-family: 'Roboto';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
     color: #FFFFFF;
+    max-width: 268px;
 }
 
 .media-soc-list {
@@ -388,7 +397,7 @@ font-family: 'Roboto';
 }
 
 .media-soc-link {
-width: 100%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -405,3 +414,266 @@ width: 100%;
 }
 
 .media-soc-icon {}
+
+.subscribe-footer {
+    top: 0;
+}
+
+.subscribe-wrap {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.subscribe-text {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom: 16px;
+    display: block;
+}
+
+.subscribe-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: transparent;
+    outline: none;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    color: #FFFFFF;
+}
+
+.subscribe-input::placeholder {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-btn {
+    padding: 8px 64px 8px 24px;
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    background: #4d5ae5;
+    border: 1px solid #4d5ae5;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+}
+
+.subscribe-btn::after {
+    content: "";
+    width: 24px;
+    height: 20px;
+    background-image: url(../img/icon\ send.svg);
+    position: absolute;
+    top: 50%;
+    right: 24px;
+    transform: translateY(-50%);
+}
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.4);
+    transition: opacity var(--transition), pointer-events var(--transition),
+        visibility var(--transition);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform var(--transition);
+    padding: 24px;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(1.5);
+}
+
+.backdrop-btn {
+    background: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    box-sizing: border-box;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    transition: background var(--transition), border-radius var(--transition),
+        fill var(--transition);
+    margin-bottom: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.backdrop-btn:hover,
+.backdrop-btn:focus {
+    background: #404bbf;
+    border-radius: 50%;
+    fill: #ffffff;
+}
+
+.modal-title {
+    margin-bottom: 14px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+}
+
+.modal-form {}
+
+.modal-list {
+    position: relative;
+}
+
+.modal-item {
+    margin-bottom: 8px;
+}
+
+.input-label {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    color: #8E8F99;
+}
+
+.modal-input {
+    padding-left: 35px;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    ;
+    outline: none;
+    transform: border var(--transition) border-radius var(--transition);
+}
+
+.modal-wrap {
+    position: relative;
+}
+
+.modal-input:focus {
+    border: 1px solid #4D5AE5;
+}
+
+.modal-input:focus+.modal-icon {
+    fill: #4D5AE5
+}
+
+.modal-icon {
+    position: absolute;
+    left: 19px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill var(--transition);
+}
+
+.comment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 16px;
+    padding-top: 8px;
+    resize: none;
+    color: rgba(117, 117, 117, 0.5);
+    outline: none;
+}
+
+.comment::placeholder {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em
+}
+
+.privacy-wrap {
+    margin-top: 16px;
+    margin-bottom: 24px;
+}
+
+.privacy-text {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+    color: #757575;
+    display: flex;
+    align-items: center;
+    padding-bottom: 24px;
+}
+
+.privacy-text .check-icon {
+    width: 16px;
+    height: 16px;
+    border: 1px solid #2e2f42;
+    border-radius: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+    transition: background-color var(--transition), border var(--transition),
+        fill var(--transition), border-radius var(--transition);
+}
+
+.privacy-input:checked+.privacy-text .check-icon {
+    background-color: #404bbf;
+    border: 1.25px solid #404bbf;
+    border-radius: 2px;
+    fill: #f4f4fd;
+}
+
+.privacy-link {
+    color: #4d5ae5;
+    display: block;
+}
